--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="./styles/global.css">
         <link rel="stylesheet" href="./styles/index.css">
 
-        <title>Página Inicial</title>
+        <title>Jonathan Araújo</title>
     </head>
     <body>
         <header>
@@ -21,9 +21,7 @@
                 <nav id="menu">
                     <ul>
                         <li><a href="#">Inicio</a></li>
-                        <li><a href="#">Produtos</a></li>
-                        <li><a href="#">Eventos</a></li>
-                        <li><a href="#">Cursos</a></li>
+                        <li><a href="#">Serviços</a></li>
                         <li><a href="#">Contato</a></li>
                     </ul>
                 </nav>
