pequenas modificações no style

--- a/index.html
+++ b/index.html
@@ -5,36 +5,41 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <link rel="shortcut icon" href="./images/logo.ico" type="image/x-icon"> 
+
         <link rel="stylesheet" href="./styles/global.css">
         <link rel="stylesheet" href="./styles/index.css">
+
 
         <title>Jonathan Araújo</title>
     </head>
     <body>
         <header>
-            <div id="container">
-                <div class="logo">
-                    <button>
-                        <a href="#"><img src="./images/logo.ico" alt="logo da empresa"></a>
-                    </button>        
+            <main>
+                <div class="menu-principal">
+                    <div class="logo">
+                        <button>
+                            <a href="#"><img src="./images/logo.ico" width="45" height="45" alt="logo da empresa"></a>
+                        </button>        
+                    </div>
+                    <nav class="menu">
+                        <ul>
+                            <li><a href="#">Inicio</a></li>
+                            <li><a href="#">Serviços</a></li>
+                            <li><a href="#">Contato</a></li>
+                        </ul>
+                    </nav>
+                    <div class="redes-sociais">
+                        <a href="https://www.facebook.com/" target="_blank"><img src="./images/facebook.png" width="30" height="30" alt="facebook"></a>
+                        <a href="https://web.whatsapp.com/" target="_blank"><img src="./images/whatsapp.png" width="30" height="30" alt="whatsapp"></a>
+                        <a href="https://br.linkedin.com/" target="_blank"><img src="./images/linkedin.png" width="30" height="30" alt="linkedin"></a>
+                    </div>
                 </div>
-                <nav id="menu">
-                    <ul>
-                        <li><a href="#">Inicio</a></li>
-                        <li><a href="#">Serviços</a></li>
-                        <li><a href="#">Contato</a></li>
-                    </ul>
-                </nav>
-                <div class="redesSociais">
-                    <a href="https://www.facebook.com/" target="_blank"><img src="./images/facebook.png" width="30" height="30" alt="facebook"></a>
-                    <a href="https://web.whatsapp.com/" target="_blank"><img src="./images/whatsapp.png" width="30" height="30" alt="whatsapp"></a>
-                    <a href="https://br.linkedin.com/" target="_blank"><img src="./images/linkedin.png" width="30" height="30" alt="linkedin"></a>
-                </div>
-            </div>
+            </main>
         </header>
         
         <main>
-            <img src="./images/uva1.png" alt="">
+            <h1>Lorem Ipson</h1>
         </main>
 
         <section>
