--- a/index.html
+++ b/index.html
@@ -30,16 +30,22 @@
                         </ul>
                     </nav>
                     <div class="redes-sociais">
-                        <a href="https://www.facebook.com/" target="_blank"><img src="./images/facebook.png" width="30" height="30" alt="facebook"></a>
-                        <a href="https://web.whatsapp.com/" target="_blank"><img src="./images/whatsapp.png" width="30" height="30" alt="whatsapp"></a>
-                        <a href="https://br.linkedin.com/" target="_blank"><img src="./images/linkedin.png" width="30" height="30" alt="linkedin"></a>
+                        <a href="https://www.facebook.com/user.Jonathan939" target="_blank"><img src="./images/facebook.png" width="30" height="30" alt="facebook"></a>
+                        <a href="https://cat-bounce.com/" target="_blank"><img src="./images/whatsapp.png" width="30" height="30" alt="whatsapp"></a>
+                        <a href="https://www.linkedin.com/in/jonathan-araujo-a24b13192/" target="_blank"><img src="./images/linkedin.png" width="30" height="30" alt="linkedin"></a>
                     </div>
                 </div>
             </main>
         </header>
         
         <main>
-            <h1>Lorem Ipson</h1>
+            <div class="destaque">
+                <h1>Algo vai ser desenvolvido aqui um dia ou não :)</h1>
+                <div>
+                    <img src="./images/algo.jpg" width="100%" height="100%" alt="Imagem de construção">
+                </div>
+
+            </div>
         </main>
 
         <section>
