adicionado responsividade para mobile

--- a/index.html
+++ b/index.html
@@ -5,44 +5,36 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="shortcut icon" href="./images/logo.ico" type="image/x-icon"> 
+        <link rel="shortcut icon" href="./img/logo.ico" type="image/x-icon"> 
 
-        <link rel="stylesheet" href="./styles/global.css">
-        <link rel="stylesheet" href="./styles/index.css">
-
+        <link rel="stylesheet" href="./css/index.css">
 
         <title>Jonathan Araújo</title>
     </head>
     <body>
-        <header>
-            <main>
-                <div class="menu-principal">
-                    <div class="logo">
-                        <button>
-                            <a href="#"><img src="./images/logo.ico" width="45" height="45" alt="logo da empresa"></a>
-                        </button>        
-                    </div>
-                    <nav class="menu">
-                        <ul>
-                            <li><a href="#">Inicio</a></li>
-                            <li><a href="#">Serviços</a></li>
-                            <li><a href="#">Contato</a></li>
-                        </ul>
-                    </nav>
-                    <div class="redes-sociais">
-                        <a href="https://www.facebook.com/user.Jonathan939" target="_blank"><img src="./images/facebook.png" width="30" height="30" alt="facebook"></a>
-                        <a href="https://cat-bounce.com/" target="_blank"><img src="./images/whatsapp.png" width="30" height="30" alt="whatsapp"></a>
-                        <a href="https://www.linkedin.com/in/jonathan-araujo-a24b13192/" target="_blank"><img src="./images/linkedin.png" width="30" height="30" alt="linkedin"></a>
-                    </div>
-                </div>
-            </main>
+        <header id="header">
+            <nav id="nav">
+                <a href="/"><img src="./img/logo.ico" width="45" height="45" alt="logo da empresa"></a>        
+
+                <ul id="menu">
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Serviços</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+
+                <ul id="redes-sociais">
+                    <li><a href="https://www.facebook.com/user.Jonathan939" target="_blank" rel="noopener noreferrer"><img src="./img/facebook.png" width="30px" height="30px" alt="facebook"></a></li>
+                    <li><a href="http://" target="_blank" rel="noopener noreferrer"><img src="./img/whatsapp.png" width="30px" height="30px" alt="whatsapp"></a></li>
+                    <li><a href="http://" target="_blank" rel="noopener noreferrer"><img src="./img/linkedin.png" width="30px" height="30px" alt="linkedin"></a></li>
+                </ul>
+            </nav>
         </header>
         
         <main>
-            <div class="destaque">
+            <div id="destaque">
                 <h1>Algo vai ser desenvolvido aqui um dia ou não :)</h1>
                 <div>
-                    <img src="./images/algo.jpg" width="100%" height="100%" alt="Imagem de construção">
+                    <img src="./img/algo.jpg" width="100%" height="100%" alt="Imagem de construção">
                 </div>
 
             </div>
