pequenas alterações na estilização

--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
                 </button>
                 <ul id="menu" role="menu">
                     <li><a class="options" href="#">Inicio</a></li>
-                    <li><a class="options" href="#">Serviços</a></li>
+                    <li><a class="options" href="#">Sobre</a></li>
                     <li><a class="options" href="#">Contato</a></li>
                     <li id="redes-sociais">
-                        <span><a href="https://www.facebook.com/user.Jonathan939" target="_blank" rel="noopener noreferrer"><img src="./img/facebook.png" width="35px" height="35px" alt="facebook"></a></span>
-                        <span><a href="http://" target="_blank" rel="noopener noreferrer"><img src="./img/whatsapp.png" width="35px" height="35px" alt="whatsapp"></a></span>
-                        <span><a href="http://" target="_blank" rel="noopener noreferrer"><img src="./img/linkedin.png" width="35px" height="35px" alt="linkedin"></a></span>
+                        <span><a href="https://www.facebook.com/userJonathanx" target="_blank" rel="noopener noreferrer"><img src="./img/facebook.png" width="30px" height="30px" alt="facebook"></a></span>
+                        <span><a href="https://www.instagram.com/userjonathan/" target="_blank" rel="noopener noreferrer"><img src="./img/instagram.png" width="30px" height="30px" alt="instagram"></a></span>
+                        <!-- <span><a href="http://" target="_blank" rel="noopener noreferrer"><img src="./img/whatsapp.png" width="30px" height="30px" alt="whatsapp"></a></span> -->
+                        <span><a href="https://github.com/User-Jonathan" target="_blank" rel="noopener noreferrer"><img src="./img/github.png" width="30px" height="30px" alt="github"></a></span>
+                        <span><a href="https://www.linkedin.com/in/jonathan-araujo-a24b13192/" target="_blank" rel="noopener noreferrer"><img src="./img/linkedin.png" width="30px" height="30px" alt="linkedin"></a></span>
                     </li>
                 </ul>
             </nav>
