--- a/index.html
+++ b/index.html
@@ -13,33 +13,38 @@
     </head>
     <body>
         <header id="header">
-            <a id="logo" href="/"><img src="./img/logo.ico" width="45" height="45" alt="logo da empresa"></a>
-            <nav id="nav">    
-                <button aria-label="Abrir menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">Menu 
-                    <span id="hamburguer"></span>
-                </button>
-                <ul id="menu" role="menu">
-                    <li><a class="options" href="#">Inicio</a></li>
-                    <li><a class="options" href="#">Sobre</a></li>
-                    <li><a class="options" href="#">Contato</a></li>
-                    <li id="redes-sociais">
-                        <span><a href="https://www.facebook.com/userJonathanx" target="_blank" rel="noopener noreferrer"><img src="./img/facebook.png" width="30px" height="30px" alt="facebook"></a></span>
-                        <span><a href="https://www.instagram.com/userjonathan/" target="_blank" rel="noopener noreferrer"><img src="./img/instagram.png" width="30px" height="30px" alt="instagram"></a></span>
-                        <!-- <span><a href="http://" target="_blank" rel="noopener noreferrer"><img src="./img/whatsapp.png" width="30px" height="30px" alt="whatsapp"></a></span> -->
-                        <span><a href="https://github.com/User-Jonathan" target="_blank" rel="noopener noreferrer"><img src="./img/github.png" width="30px" height="30px" alt="github"></a></span>
-                        <span><a href="https://www.linkedin.com/in/jonathan-araujo-a24b13192/" target="_blank" rel="noopener noreferrer"><img src="./img/linkedin.png" width="30px" height="30px" alt="linkedin"></a></span>
-                    </li>
-                </ul>
-            </nav>
+            <div class="center-itens">
+                <nav id="nav">    
+                    <a id="logo" href="/"><img src="./img/logo.ico" width="45" height="45" alt="logo da empresa"></a>
+                    <button aria-label="Abrir menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
+                        Menu 
+                        <span id="hamburguer"></span>
+                    </button>
+                    <ul id="menu" role="menu">
+                        <li><a class="options" href="#">Inicio</a></li>
+                        <li><a class="options" href="#">Sobre</a></li>
+                        <li><a class="options" href="#">Contato</a></li>
+                        <li id="redes-sociais">
+                            <span><a href="https://www.facebook.com/userJonathanx" target="_blank" rel="noopener noreferrer"><img src="./img/facebook.png" width="30px" height="30px" alt="facebook"></a></span>
+                            <span><a href="https://www.instagram.com/userjonathan/" target="_blank" rel="noopener noreferrer"><img src="./img/instagram.png" width="30px" height="30px" alt="instagram"></a></span>
+                            <!-- <span><a href="http://" target="_blank" rel="noopener noreferrer"><img src="./img/whatsapp.png" width="30px" height="30px" alt="whatsapp"></a></span> -->
+                            <span><a href="https://github.com/User-Jonathan" target="_blank" rel="noopener noreferrer"><img src="./img/github.png" width="30px" height="30px" alt="github"></a></span>
+                            <span><a href="https://www.linkedin.com/in/jonathan-araujo-a24b13192/" target="_blank" rel="noopener noreferrer"><img src="./img/linkedin.png" width="30px" height="30px" alt="linkedin"></a></span>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </header>
         
         <main>
-            <div id="destaque">
-                <h1>Algo vai ser desenvolvido aqui um dia ou não :)</h1>
-                <div>
-                    <img src="./img/algo.jpg" width="100%" height="100%" alt="Imagem de construção">
-                </div>
+            <div class="center-itens">
+                <div id="destaque">
+                    <h1>Algo vai ser desenvolvido aqui um dia ou não :)</h1>
+                    <div>
+                        <img src="./img/algo.png" width="100%" height="100%" alt="Imagem de construção">
+                    </div>
 
+                </div>
             </div>
         </main>
 
