--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                         <li><a class="options" href="#">Sobre</a></li>
                         <li><a class="options" href="#">Contato</a></li>
                         <li id="redes-sociais">
-                            <span><a href="https://www.facebook.com/userJonathanx" target="_blank" rel="noopener noreferrer"><img src="./img/facebook.png" width="30px" height="30px" alt="facebook"></a></span>
-                            <span><a href="https://www.instagram.com/userjonathan/" target="_blank" rel="noopener noreferrer"><img src="./img/instagram.png" width="30px" height="30px" alt="instagram"></a></span>
-                            <!-- <span><a href="http://" target="_blank" rel="noopener noreferrer"><img src="./img/whatsapp.png" width="30px" height="30px" alt="whatsapp"></a></span> -->
-                            <span><a href="https://github.com/User-Jonathan" target="_blank" rel="noopener noreferrer"><img src="./img/github.png" width="30px" height="30px" alt="github"></a></span>
+                            <span><a href="https://www.facebook.com/itsJonathanx" target="_blank" rel="noopener noreferrer"><img src="./img/facebook.png" width="30px" height="30px" alt="facebook"></a></span>
+                            <span><a href="https://www.instagram.com/itsJonathanx/" target="_blank" rel="noopener noreferrer"><img src="./img/instagram.png" width="30px" height="30px" alt="instagram"></a></span>
+                            <span><a href="http://weavesilk.com/" target="_blank" rel="noopener noreferrer"><img src="./img/whatsapp.png" width="30px" height="30px" alt="whatsapp"></a></span> -->
+                            <span><a href="https://github.com/itsJonathanx" target="_blank" rel="noopener noreferrer"><img src="./img/github.png" width="30px" height="30px" alt="github"></a></span>
                             <span><a href="https://www.linkedin.com/in/jonathan-araujo-a24b13192/" target="_blank" rel="noopener noreferrer"><img src="./img/linkedin.png" width="30px" height="30px" alt="linkedin"></a></span>
                         </li>
                     </ul>
